--- a/file-1.html
+++ b/file-1.html
@@ -5,6 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>commit</title>
+
+<style>
+    body{
+        font-family: Arial,sans-serif;
+        background-color : #036
+    color : #333;
+
+    }
+    
+    h1{
+        color:#0066cc;
+    }
+
+    p{
+        font-size: 16px;
+    }
+
+</style>
 </head>
 <body>
     <h1>first commit</h1>
